# spread

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: ci.yml
examples/: construction-business-plan.xlsx
packaging/macos/: Info.plist  Spread.icns
scripts/: generate_icons.sh  xlsx_inspect.py
src/: csv_source.rs  main.rs  parquet_source.rs  view.rs  workbook.rs
src/sources/: csv.rs  mod.rs  parquet.rs  xlsx.rs
