[package]
name = "spread"
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["Samuel Colvin <samuel@pydantic.dev>"]
description = "Spreadsheet and table viewer"
homepage = "https://github.com/samuelcolvin/spread"

[dependencies]
anyhow = "1.0"
arrow-array = "56.2"
arrow-cast = "56.2"
arrow-schema = "56.2"
calamine = "0.34"
clap = { version = "4.6", features = ["derive"] }
comfy-table = "7.2.2"
csv = "1.4"
formualizer-workbook = "0.5.2"
gpui = "0.2.2"
parquet = { version = "56.2", features = ["arrow"] }
quick-xml = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "7.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "=0.26.0"

[lints.clippy]
# in general we lint against the pedantic group, but we will whitelist
# certain lints which we don't want to enforce
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
doc_markdown = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
too_many_lines = "allow"
